--- a/src/styles/todo-panel.scss
+++ b/src/styles/todo-panel.scss
@@ -1,3 +1,9 @@
+.todo-panel {
+  display: grid;
+  grid-template-rows: min-content min-content 1fr;
+  gap: 5px;
+}
+
 .selected-list {
   font-size: 1.4rem;
   font-weight: 500;
@@ -9,4 +15,12 @@
   border-radius: 10px;
   background-color: $input;
   padding: 10px;
+}
+
+.todo-list {
+  height: 100%;
+  overflow-y: hidden;
+  &:hover {
+    overflow-y: auto;
+  }
 }
